fixed map, table, slider

--- a/#src/catalog.html
+++ b/#src/catalog.html
@@ -311,6 +311,50 @@
 									</div>
 								</a>
 							</div>
+							<div class="swiper-slide">
+								<a href="#" class="product-slide">
+									<div class="product-slide__descr">
+										<h3 class="product-slide__title">Серьги «Ромашка»</h3>
+										<p class="product-slide__subtitle">серебро 925, финифть</p>
+										<div class="product-slide__price">
+											<span class="product-slide__old">7500 ₽</span>
+											<span class="product-slide__new">6500 ₽</span>
+										</div>
+									</div>
+									<div class="product-slide__image">
+										<img src="img/product-slide-1jpg.jpg" alt="">
+										<span>подробнее</span>
+									</div>
+									<div class="product-slide__decor">
+										<div class="to-cart">
+											<span class="to-cart__icon" style="background-image: url('img/shopping-bag.svg');"></span>
+											<span class="to-cart__text">Заказать</span>
+										</div>
+									</div>
+								</a>
+							</div>
+							<div class="swiper-slide">
+								<a href="#" class="product-slide">
+									<div class="product-slide__descr">
+										<h3 class="product-slide__title">Серьги «Ромашка»</h3>
+										<p class="product-slide__subtitle">серебро 925, финифть</p>
+										<div class="product-slide__price">
+											<span class="product-slide__old">7500 ₽</span>
+											<span class="product-slide__new">6500 ₽</span>
+										</div>
+									</div>
+									<div class="product-slide__image">
+										<img src="img/product-slide-1jpg.jpg" alt="">
+										<span>подробнее</span>
+									</div>
+									<div class="product-slide__decor">
+										<div class="to-cart">
+											<span class="to-cart__icon" style="background-image: url('img/shopping-bag.svg');"></span>
+											<span class="to-cart__text">Заказать</span>
+										</div>
+									</div>
+								</a>
+							</div>
 						</div>
 
 					</div>
