--- a/#src/delivery.html
+++ b/#src/delivery.html
@@ -260,16 +260,19 @@
 							</div>
 							<div class="item-delivery__bot">
 								<div class="item-delivery__text">
-									<h3>С другой стороны реализация намеченных плановых заданий обеспечивает широкому кругу (специалистов)
+									<h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum rerum possimus explicabo tempore
+										rem
+										nemo inventore assumenda tenetur saepe? Possimus dicta impedit placeat veniam expedita vitae
+										excepturi culpa amet voluptatem!
 									</h3>
-									<p>Прелесть большинства гонок с препятствиями в том, что они не требуют сверхъестественных сил и
-										способностей – пробежать массовый старт может человек с любым уровнем подготовки. И всё-таки
-										небольшой
-										спортивный базис нужно иметь, чтобы получить максимальное удовольствие от старта.</p>
-									<p>Прелесть большинства гонок с препятствиями в том, что они не требуют сверхъестественных сил и
-										способностей – пробежать массовый старт может человек с любым уровнем подготовки. И всё-таки
-										небольшой
-										спортивный базис нужно иметь, чтобы получить максимальное удовольствие от старта.</p>
+									<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum rerum possimus explicabo tempore
+										rem
+										nemo inventore assumenda tenetur saepe? Possimus dicta impedit placeat veniam expedita vitae
+										excepturi culpa amet voluptatem!</p>
+									<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum rerum possimus explicabo tempore
+										rem
+										nemo inventore assumenda tenetur saepe? Possimus dicta impedit placeat veniam expedita vitae
+										excepturi culpa amet voluptatem!</p>
 									<ul>
 										<li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum rerum possimus explicabo tempore
 											rem
@@ -301,21 +304,14 @@
 									<div class="table">
 										<table>
 											<tr>
-												<th rowspan="2">№</th>
-												<th rowspan="2">НАЗВАНИЕ ПРЕПЯТСТВИЙ</th>
-												<th rowspan="2">ПОРЯДОК ПРОХОЖДЕНИЯ</th>
-												<th colspan="2">КАТЕГОРИИ</th>
+												<th>lorem</th>
+												<th>lorem</th>
+												<th>lorem</th>
 											</tr>
 											<tr>
-												<th>PRO/PRO TEAM</th>
-												<th>FAN/FAN TEAM </th>
-											</tr>
-											<tr>
-												<td>Идейные соображения высшего порядка</td>
-												<td>Идейные соображения высшего порядка, а также укрепление и развитие структуры позволяет
-													выполнять важные задания по разработке направлений прогрессивного развития.</td>
-												<td>Идейные соображения высшего порядка, а также укрепление и развитие структуры позволяет
-													выполнять важные задания по разработке направлений прогрессивного развития.</td>
+												<td>lorem ipsum</td>
+												<td>lorem ipsum</td>
+												<td>lorem ipsum</td>
 											</tr>
 											<tr>
 												<td>wfewffw</td>
@@ -337,14 +333,14 @@
 									<div class="table on-grey">
 										<table>
 											<tr>
-												<th rowspan="2">№</th>
-												<th rowspan="2">НАЗВАНИЕ ПРЕПЯТСТВИЙ</th>
-												<th rowspan="2">ПОРЯДОК ПРОХОЖДЕНИЯ</th>
-												<th colspan="2">КАТЕГОРИИ</th>
+												<th>lorem</th>
+												<th>lorem</th>
+												<th>lorem</th>
 											</tr>
 											<tr>
-												<th>PRO/PRO TEAM</th>
-												<th>FAN/FAN TEAM </th>
+												<td>lorem ipsum</td>
+												<td>lorem ipsum</td>
+												<td>lorem ipsum</td>
 											</tr>
 											<tr>
 												<td>wfewffw</td>
