--- a/#src/footer.html
+++ b/#src/footer.html
@@ -33,8 +33,7 @@
 				<div class="text-footer__item">Все права защищены, копирование любых материалов запрещено.</div>
 				<div data-src="#modal-polit" class="text-footer__item to-privacy">Политика конфиденциальности</div>
 				<div class="text-footer__item">Разработка сайта - <a href="https://udnet.ru/" target="_blank"
-						class="dev">Удобный интернет
-						©</a>
+						class="dev">Удобный интернет</a> ©
 					2020</div>
 			</div>
 		</div>
