--- a/#src/product.html
+++ b/#src/product.html
@@ -267,31 +267,31 @@
 								<div class="product-gal product-gal--2">
 									<div class="swiper-wrapper product__wrapper">
 										<div class="swiper-slide">
-											<a href="img/product-1.jpg" class="product-gal__item" data-fancybox="product"
+											<a href="img/product-1.jpg" class="product-gal__item" data-fancybox="product-1"
 												style="background-image: url(img/product-1.jpg);">
 												<img src="img/help-product-slider.jpg" class="help-img" alt="">
 											</a>
 										</div>
 										<div class="swiper-slide">
-											<a href="img/product-2.jpg" class="product-gal__item" data-fancybox="product"
+											<a href="img/product-2.jpg" class="product-gal__item" data-fancybox="product-1"
 												style="background-image: url(img/product-2.jpg);">
 												<img src="img/help-product-slider.jpg" class="help-img" alt="">
 											</a>
 										</div>
 										<div class="swiper-slide">
-											<a href="img/product-3.jpg" class="product-gal__item" data-fancybox="product"
+											<a href="img/product-3.jpg" class="product-gal__item" data-fancybox="product-1"
 												style="background-image: url(img/product-3.jpg);">
 												<img src="img/help-product-slider.jpg" class="help-img" alt="">
 											</a>
 										</div>
 										<div class="swiper-slide">
-											<a href="img/product-4.jpg" class="product-gal__item" data-fancybox="product"
+											<a href="img/product-4.jpg" class="product-gal__item" data-fancybox="product-1"
 												style="background-image: url(img/product-4.jpg);">
 												<img src="img/help-product-slider.jpg" class="help-img" alt="">
 											</a>
 										</div>
 										<div class="swiper-slide">
-											<a href="img/product-1.jpg" class="product-gal__item" data-fancybox="product"
+											<a href="img/product-1.jpg" class="product-gal__item" data-fancybox="product-1"
 												style="background-image: url(img/product-1.jpg);">
 												<img src="img/help-product-slider.jpg" class="help-img" alt="">
 											</a>
@@ -342,6 +342,50 @@
 									</div>
 									<div class="product-slide__decor">
 										<div data-src="#modal-buy" class="to-cart">
+											<span class="to-cart__icon" style="background-image: url('img/shopping-bag.svg');"></span>
+											<span class="to-cart__text">Заказать</span>
+										</div>
+									</div>
+								</a>
+							</div>
+							<div class="swiper-slide">
+								<a href="#" class="product-slide">
+									<div class="product-slide__descr">
+										<h3 class="product-slide__title">Серьги «Ромашка»</h3>
+										<p class="product-slide__subtitle">серебро 925, финифть</p>
+										<div class="product-slide__price">
+											<span class="product-slide__old">7500 ₽</span>
+											<span class="product-slide__new">6500 ₽</span>
+										</div>
+									</div>
+									<div class="product-slide__image">
+										<img src="img/product-slide-1jpg.jpg" alt="">
+										<span>подробнее</span>
+									</div>
+									<div class="product-slide__decor">
+										<div class="to-cart">
+											<span class="to-cart__icon" style="background-image: url('img/shopping-bag.svg');"></span>
+											<span class="to-cart__text">Заказать</span>
+										</div>
+									</div>
+								</a>
+							</div>
+							<div class="swiper-slide">
+								<a href="#" class="product-slide">
+									<div class="product-slide__descr">
+										<h3 class="product-slide__title">Серьги «Ромашка»</h3>
+										<p class="product-slide__subtitle">серебро 925, финифть</p>
+										<div class="product-slide__price">
+											<span class="product-slide__old">7500 ₽</span>
+											<span class="product-slide__new">6500 ₽</span>
+										</div>
+									</div>
+									<div class="product-slide__image">
+										<img src="img/product-slide-1jpg.jpg" alt="">
+										<span>подробнее</span>
+									</div>
+									<div class="product-slide__decor">
+										<div class="to-cart">
 											<span class="to-cart__icon" style="background-image: url('img/shopping-bag.svg');"></span>
 											<span class="to-cart__text">Заказать</span>
 										</div>
