--- a/#src/index.html
+++ b/#src/index.html
@@ -24,78 +24,103 @@
 		</div>
 
 		<div class="vsplivashki">
-			<div class="nav-header-top__dropdown submenu-main">
-				<div class="submenu-main__container">
-					<h2 class="submenu-main__title">Серьги</h2>
-					<ul class="submenu-main__list">
-						<li class="submenu-main__item">
-							<a href="#" class="submenu-main__link">Комплекты</a>
-						</li>
-						<li class="submenu-main__item">
-							<a href="#" class="submenu-main__link">Серьги</a>
-						</li>
-						<li class="submenu-main__item submenu-main__item--active">
-							<a href="#" class="submenu-main__link">Колье</a>
-						</li>
-						<li class="submenu-main__item">
-							<a href="#" class="submenu-main__link">Кольца</a>
-						</li>
-						<li class="submenu-main__item">
-							<a href="#" class="submenu-main__link">Броши</a>
-						</li>
-						<li class="submenu-main__item">
-							<a href="#" class="submenu-main__link">Браслеты</a>
-						</li>
-						<li class="submenu-main__item">
-							<a href="#" class="submenu-main__link">Цепи</a>
-						</li>
-					</ul>
-					<ul class="submenu-main__bot">
-						<li>
-							<a href="#">иконы</a>
-						</li>
-						<li>
-							<a href="#">Другие изделия</a>
-						</li>
-					</ul>
+			<div class="vsplivashki__container">
+				<div class="nav-header-top__dropdown submenu-main">
+
+					<div class="submenu-main__container">
+						<h2 class="submenu-main__title slide">Серьги</h2>
+						<ul class="submenu-main__list">
+							<li class="submenu-main__item">
+								<a href="#" class="submenu-main__link">Комплекты</a>
+							</li>
+							<li class="submenu-main__item">
+								<a href="#" class="submenu-main__link">Серьги</a>
+							</li>
+							<li class="submenu-main__item submenu-main__item--active">
+								<a href="#" class="submenu-main__link">Колье</a>
+							</li>
+							<li class="submenu-main__item">
+								<a href="#" class="submenu-main__link">Кольца</a>
+							</li>
+							<li class="submenu-main__item">
+								<a href="#" class="submenu-main__link">Броши</a>
+							</li>
+							<li class="submenu-main__item">
+								<a href="#" class="submenu-main__link">Браслеты</a>
+							</li>
+							<li class="submenu-main__item">
+								<a href="#" class="submenu-main__link">Цепи</a>
+							</li>
+						</ul>
+					</div>
+
+					<div class="submenu-main__container">
+						<h2 class="submenu-main__title slide">Цепи</h2>
+						<ul class="submenu-main__list">
+							<li class="submenu-main__item">
+								<a href="#" class="submenu-main__link">Комплекты</a>
+							</li>
+							<li class="submenu-main__item">
+								<a href="#" class="submenu-main__link">Серьги</a>
+							</li>
+							<li class="submenu-main__item submenu-main__item--active">
+								<a href="#" class="submenu-main__link">Колье</a>
+							</li>
+							<li class="submenu-main__item">
+								<a href="#" class="submenu-main__link">Кольца</a>
+							</li>
+							<li class="submenu-main__item">
+								<a href="#" class="submenu-main__link">Броши</a>
+							</li>
+							<li class="submenu-main__item">
+								<a href="#" class="submenu-main__link">Браслеты</a>
+							</li>
+							<li class="submenu-main__item">
+								<a href="#" class="submenu-main__link">Цепи</a>
+							</li>
+						</ul>
+					</div>
+
+					<div class="submenu-main__container">
+						<a href="#" class="submenu-main__title">Кольца</a>
+					</div>
+
+				</div>
+
+				<div class="nav-header-top__dropdown submenu-main">
+					<div class="submenu-main__container">
+						<h2 class="submenu-main__title slide">Серьги</h2>
+						<ul class="submenu-main__list">
+							<li class="submenu-main__item">
+								<a href="#" class="submenu-main__link">Комплекты</a>
+							</li>
+							<li class="submenu-main__item">
+								<a href="#" class="submenu-main__link">Серьги</a>
+							</li>
+							<li class="submenu-main__item submenu-main__item--active">
+								<a href="#" class="submenu-main__link">Колье</a>
+							</li>
+							<li class="submenu-main__item">
+								<a href="#" class="submenu-main__link">Кольца</a>
+							</li>
+							<li class="submenu-main__item">
+								<a href="#" class="submenu-main__link">Броши</a>
+							</li>
+							<li class="submenu-main__item">
+								<a href="#" class="submenu-main__link">Браслеты</a>
+							</li>
+							<li class="submenu-main__item">
+								<a href="#" class="submenu-main__link">Цепи</a>
+							</li>
+						</ul>
+					</div>
+
+					<div class="submenu-main__container">
+						<a href="#" class="submenu-main__title">Кольца</a>
+					</div>
 				</div>
 			</div>
-			<div class="nav-header-top__dropdown submenu-main">
-				<div class="submenu-main__container">
-					<h2 class="submenu-main__title">ювелирные украшения</h2>
-					<ul class="submenu-main__list">
-						<li class="submenu-main__item">
-							<a href="#" class="submenu-main__link">Комплекты</a>
-						</li>
-						<li class="submenu-main__item">
-							<a href="#" class="submenu-main__link">Серьги</a>
-						</li>
-						<li class="submenu-main__item submenu-main__item--active">
-							<a href="#" class="submenu-main__link">Колье</a>
-						</li>
-						<li class="submenu-main__item">
-							<a href="#" class="submenu-main__link">Кольца</a>
-						</li>
-						<li class="submenu-main__item">
-							<a href="#" class="submenu-main__link">Броши</a>
-						</li>
-						<li class="submenu-main__item">
-							<a href="#" class="submenu-main__link">Браслеты</a>
-						</li>
-						<li class="submenu-main__item">
-							<a href="#" class="submenu-main__link">Цепи</a>
-						</li>
-					</ul>
-					<ul class="submenu-main__bot">
-						<li>
-							<a href="#">иконы</a>
-						</li>
-						<li>
-							<a href="#">Другие изделия</a>
-						</li>
-					</ul>
-				</div>
-			</div>
+
 		</div>
 
 
