--- a/#src/mobile-menu.html
+++ b/#src/mobile-menu.html
@@ -14,12 +14,64 @@
                 <button class="mob-menu__close"></button>
               </div>
               <div class="submenu__list">
-                <div class="submenu__item">
-                  <a href="#" class="submenu__link">Женщины</a>
+                <div class="submenu-main__container">
+                  <h2 class="submenu-main__title slide">Серьги</h2>
+                  <ul class="submenu-main__list">
+                    <li class="submenu-main__item">
+                      <a href="#" class="submenu-main__link">Комплекты</a>
+                    </li>
+                    <li class="submenu-main__item">
+                      <a href="#" class="submenu-main__link">Серьги</a>
+                    </li>
+                    <li class="submenu-main__item submenu-main__item--active">
+                      <a href="#" class="submenu-main__link">Колье</a>
+                    </li>
+                    <li class="submenu-main__item">
+                      <a href="#" class="submenu-main__link">Кольца</a>
+                    </li>
+                    <li class="submenu-main__item">
+                      <a href="#" class="submenu-main__link">Броши</a>
+                    </li>
+                    <li class="submenu-main__item">
+                      <a href="#" class="submenu-main__link">Браслеты</a>
+                    </li>
+                    <li class="submenu-main__item">
+                      <a href="#" class="submenu-main__link">Цепи</a>
+                    </li>
+                  </ul>
                 </div>
-                <div class="submenu__item">
-                  <a href="#" class="submenu__link">Мужчины</a>
+
+                <div class="submenu-main__container">
+                  <h2 class="submenu-main__title slide">Цепи</h2>
+                  <ul class="submenu-main__list">
+                    <li class="submenu-main__item">
+                      <a href="#" class="submenu-main__link">Комплекты</a>
+                    </li>
+                    <li class="submenu-main__item">
+                      <a href="#" class="submenu-main__link">Серьги</a>
+                    </li>
+                    <li class="submenu-main__item submenu-main__item--active">
+                      <a href="#" class="submenu-main__link">Колье</a>
+                    </li>
+                    <li class="submenu-main__item">
+                      <a href="#" class="submenu-main__link">Кольца</a>
+                    </li>
+                    <li class="submenu-main__item">
+                      <a href="#" class="submenu-main__link">Броши</a>
+                    </li>
+                    <li class="submenu-main__item">
+                      <a href="#" class="submenu-main__link">Браслеты</a>
+                    </li>
+                    <li class="submenu-main__item">
+                      <a href="#" class="submenu-main__link">Цепи</a>
+                    </li>
+                  </ul>
                 </div>
+
+                <div class="submenu-main__container">
+                  <a href="#" class="submenu-main__title">Кольца</a>
+                </div>
+
               </div>
             </div>
           </div>
@@ -32,23 +84,62 @@
                 <button class="mob-menu__close"></button>
               </div>
               <div class="submenu__list">
-                <div class="submenu__item">
-                  <a href="#" class="submenu__link">Комплекты</a>
+                <div class="submenu-main__container">
+                  <h2 class="submenu-main__title slide">Серьги</h2>
+                  <ul class="submenu-main__list">
+                    <li class="submenu-main__item">
+                      <a href="#" class="submenu-main__link">Комплекты</a>
+                    </li>
+                    <li class="submenu-main__item">
+                      <a href="#" class="submenu-main__link">Серьги</a>
+                    </li>
+                    <li class="submenu-main__item submenu-main__item--active">
+                      <a href="#" class="submenu-main__link">Колье</a>
+                    </li>
+                    <li class="submenu-main__item">
+                      <a href="#" class="submenu-main__link">Кольца</a>
+                    </li>
+                    <li class="submenu-main__item">
+                      <a href="#" class="submenu-main__link">Броши</a>
+                    </li>
+                    <li class="submenu-main__item">
+                      <a href="#" class="submenu-main__link">Браслеты</a>
+                    </li>
+                    <li class="submenu-main__item">
+                      <a href="#" class="submenu-main__link">Цепи</a>
+                    </li>
+                  </ul>
                 </div>
-                <div class="submenu__item">
-                  <a href="#" class="submenu__link">Серьги</a>
+
+                <div class="submenu-main__container">
+                  <h2 class="submenu-main__title slide">Цепи</h2>
+                  <ul class="submenu-main__list">
+                    <li class="submenu-main__item">
+                      <a href="#" class="submenu-main__link">Комплекты</a>
+                    </li>
+                    <li class="submenu-main__item">
+                      <a href="#" class="submenu-main__link">Серьги</a>
+                    </li>
+                    <li class="submenu-main__item submenu-main__item--active">
+                      <a href="#" class="submenu-main__link">Колье</a>
+                    </li>
+                    <li class="submenu-main__item">
+                      <a href="#" class="submenu-main__link">Кольца</a>
+                    </li>
+                    <li class="submenu-main__item">
+                      <a href="#" class="submenu-main__link">Броши</a>
+                    </li>
+                    <li class="submenu-main__item">
+                      <a href="#" class="submenu-main__link">Браслеты</a>
+                    </li>
+                    <li class="submenu-main__item">
+                      <a href="#" class="submenu-main__link">Цепи</a>
+                    </li>
+                  </ul>
                 </div>
-                <div class="submenu__item">
-                  <a href="#" class="submenu__link">Колье</a>
-                </div>
-                <div class="submenu__item">
-                  <a href="#" class="submenu__link">Кольца</a>
-                </div>
-                <div class="submenu__item">
-                  <a href="#" class="submenu__link">Броши</a>
-                </div>
-                <div class="submenu__item">
-                  <a href="#" class="submenu__link">Браслеты</a>
+
+                <div class="submenu-main__container">
+                  <a href="#" class="submenu-main__title">Кольца</a>
                 </div>
               </div>
             </div>
