--- a/#src/modal.html
+++ b/#src/modal.html
@@ -16,6 +16,7 @@
 					<p>Комментарии к заказу</p>
 					<textarea></textarea>
 				</div>
+				<input type="hidden">
 				<button type="submit" class="form-modal-buy__btn btn">Отправить</button>
 			</form>
 			<div class="modal-buy__privacy">Я даю согласие на обработку <a class="to-privacy"
