--- a/#src/index.html
+++ b/#src/index.html
@@ -141,15 +141,24 @@
 						<nav class="header__nav nav-header">
 							<ul class="nav-header__top nav-header-top">
 								<li class="nav-header-top__item">
-									<a href="" class="nav-header-top__link">Корпоративные изделия</a>
+									<a href="" class="nav-header-top__link">Корпоративные</a>
 								</li>
 								<li class="nav-header-top__item current">
-									<a href="" class="nav-header-top__link">Индивидуальные изделия</a>
+									<a href="" class="nav-header-top__link">Индивидуальные</a>
+								</li>
+								<li class="nav-header-top__item current">
+									<a href="" class="nav-header-top__link">Индивидуальные</a>
+								</li>
+								<li class="nav-header-top__item current">
+									<a href="" class="nav-header-top__link">Индивидуальные</a>
 								</li>
 							</ul>
 							<ul class="nav-header__bot nav-header-bot">
 								<li class="nav-header-bot__item">
 									<a href="" class="nav-header-bot__link">Доставка и оплата</a>
+								</li>
+								<li class="nav-header-bot__item current">
+									<a href="" class="nav-header-bot__link">Контакты</a>
 								</li>
 								<li class="nav-header-bot__item current">
 									<a href="" class="nav-header-bot__link">Контакты</a>
